--- a/Cource/Lesson 5/Card/styles.css
+++ b/Cource/Lesson 5/Card/styles.css
@@ -24,7 +24,7 @@ nav a:hover{
 }
 
 nav svg:hover{
-    color: #9e040e;
+    color: #E30A18;
 }
 
 body{
@@ -40,7 +40,7 @@ body{
 #about img{
     height: 500px;
     border-radius: 50px;
-    border: 10px solid #E30A18;
+    border: 10px solid #9e040e;
 }
 
 #about h1{
@@ -59,5 +59,67 @@ body{
 #about p span{
     font-family: 'Josefin Sans';
     font-size: 40px;
-    color: #E30A18;
+    color: #9e040e;
+}
+
+#ex h2{
+    font-family: 'Josefin Sans';
+    font-size: 50px;
+    color: white;
+}
+
+.img_src img{
+    height: 300px;
+}
+
+.img_src{
+    display: flex;
+    justify-content: space-between;
+}
+
+.case h5{
+    font-family: 'Teko';
+    font-size: 50px;
+    margin-bottom: 10px;
+    margin-top: 0%;
+    color: #9e040e;
+}
+
+.img_src_p img{
+    height: 280px;
+}
+
+.img_src_p{
+    display: flex;
+    justify-content: space-between;
+}
+
+#contacts{
+    font-family: 'Josefin Sans';
+    font-size: 30px;
+    color: #9e040e;
+    background-color: white;
+    width: 350px;
+    padding: 10px;
+    padding-left: 20px;
+    border-radius: 50px;
+    border: 2px solid black;
+}
+
+footer{
+    background-color: gray;
+    margin: 0px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+    margin-top: 20px;
+}
+
+footer p{
+    margin: 0px;
+    padding-top: 20px;
+    font-family: 'Teko';
+    font-size: 50px;
+    font-weight: 700;
+    color: rgb(37, 37, 37);
 }
