--- a/Cource/Lesson 9/style.css
+++ b/Cource/Lesson 9/style.css
@@ -4,10 +4,9 @@
     font-family: Livvic;
 }
 
-section{
+section, header, footer{
     padding-left: 240px;
     padding-right: 240px;
-
 }
 
 .cover{
@@ -69,15 +68,32 @@ section{
     text-transform: uppercase;
 }
 
-.cover button:hover{
+footer button{
+    cursor: pointer;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 100px;
+    background: #F7C35F;
+    color: #1A1A1A;
+    font-family: Livvic;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+    margin-left: 40px;
+}
+
+.cover button, footer button:hover{
     background: #F6D086;
 }
 
-.cover button:focus{
+.cover button, footer button:focus{
     background: #C58D21
 }
 
-.cover button:active{
+.cover button, footer button:active{
     background: #A16C06;
     color: #FFF;
 }
@@ -182,7 +198,7 @@ section{
 .projects{
     text-align: center;
     padding-top: 130px;
-    padding-bottom: 100px;
+    padding-bottom: 95px;
     background-image: url("images/back-3.png");
     background-repeat: no-repeat;
     overflow: visible;
@@ -216,14 +232,17 @@ section{
 }
 
 .card{
+    transition: 0.3s;
+    cursor: pointer;
     margin-top: 100px;
     text-align: left;
     display: flex;
     justify-content: space-around;
     border-radius: 10px;
-    width: 318px;
-    height: 350px;
-
+    border: 1px solid rgba(225, 225, 225, 0);
+    width: 307px;
+    height: 342px;
+    padding: 5px;
 }
 
 .card svg{
@@ -232,7 +251,16 @@ section{
     position: relative;
     z-index: 1px;
     margin-bottom: 0;
-    margin-top: 320px;
+    margin-top: 300px;
+}
+
+.card div{
+    vertical-align: bottom;
+    margin-right: 5px;
+    position: relative;
+    z-index: 1px;
+    margin-bottom: 0;
+    margin-top: 290px;
 
 }
 
@@ -256,13 +284,31 @@ section{
     text-transform: capitalize;
 }
 
-.card div{
-    display: block;
-    position: relative;
-    z-index: 1px;
-    margin-bottom: 0;
-    margin-top: 300px;
 
+
+.card:hover{
+    border: #F7C35F solid 1px;
+    box-shadow: 0px 0px 20px 1px rgba(247, 195, 95, 0.2);
+    transform: translateY(-10px);
+}
+
+.card:active{
+    border: #A16C06 solid 1px;
+    width: 300px;
+    height: 330px;
+    transform: translateY(10px);
+}
+
+.card svg path:active{
+    fill:#A16C06
+}
+
+.card:focus{
+    border: #C58D21 solid 1px;
+}
+
+.card svg path:focus{
+    fill:#C58D21
 }
 
 .main-c{
@@ -285,4 +331,71 @@ section{
     display: flex;
     justify-content: center;
     margin-top: 50px;
+}
+
+header{
+    height: 110px;
+    background-color: #334B35;
+    display: flex;
+    justify-content: space-between;
+}
+
+header nav{
+    margin-top: 39px;
+}
+
+nav{
+    display: flex;
+}
+
+header a{
+    margin-left: 50px;
+    text-decoration: none;
+    color: #FFF;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+nav div:hover #undl{
+    height: 2px;
+    width: auto;
+    margin-left: 50px;
+    background-color: #F7C35F;
+}
+
+footer{
+    background: #263C28;
+    height: 70px;
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+}
+
+footer p{
+    margin-top: 20px;
+}
+
+.info{
+    display: flex;
+}
+
+.info p{
+    margin-left: 25px;
+}
+
+.input{
+    width: 222px;
+    height: 55px;
+    border-radius: 50px;
+    background: #263C28;
+    border: #334B35 solid 2px;
+    padding-left: 20px;
+    color: #FFF;
 }
