--- a/Avion/style.css
+++ b/Avion/style.css
@@ -2,14 +2,20 @@
     font-family: Roboto;
     text-decoration: none;
     margin: 0;
+
 }
 
 header{
-    width: 100%;
+    width: 96%;
     padding-left: 2%;
     padding-right: 2%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .hr-line {
@@ -20,14 +26,27 @@ header{
 
 .head-menu{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content:space-between;
-    align-items: center;
+    -webkit-box-pack:justify;
+        -ms-flex-pack:justify;
+            justify-content:space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
 
 }
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 
 .head-menu h1{
     margin: 0%;
@@ -39,8 +58,12 @@ header{
 }
 
 nav{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content:center;
+    -webkit-box-pack:center;
+        -ms-flex-pack:center;
+            justify-content:center;
 }
 
 nav a{
@@ -68,10 +91,10 @@ main{
 section{
     width: 89%;
 }
-
 .hero{
     position: relative;
-    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
     text-align:left;
     width: 89%;
     height: 584px;
@@ -82,7 +105,7 @@ section{
 }
 
 .hero div{
-    width: 30%;
+    width: 45%;
     color: var(--White, #FFF);
     font-family: Roboto;
     font-size: 32px;
@@ -108,9 +131,13 @@ section{
 .hero button{
     cursor: pointer;
     margin-top: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 16px 32px;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     gap: 10px;
     border-style: none;
     color: #FFF;
@@ -121,7 +148,7 @@ section{
 }
 
 .hero p{
-    width: 40%;
+    width: 53%;
     color: var(--White, #FFF);
     font-family: Roboto;
     font-size: 20px;
@@ -138,18 +165,135 @@ section{
     font-weight: 400;
     line-height: 140%; /* 44.8px */
     margin-bottom: 40px;
-    margin-top: 60px;
 }
-
-.Fun{
+/*.Fun{
     display: flex;
     justify-content: space-between;
-}
+}*/
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 
+
+.Fun{
+    
+    display: -ms-grid;
+    
+    display: grid;
+    -ms-grid-columns: 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr;
+    grid-template-columns: repeat(12, 1fr);
+    -webkit-column-gap: 6px;
+       -moz-column-gap: 6px;
+            column-gap: 6px;
+    -ms-grid-rows: 1fr;
+    grid-template-rows: 1fr;
+}
+.Fun > *:nth-child(1){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 1;
+}
+.Fun > *:nth-child(2){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 3;
+}
+.Fun > *:nth-child(3){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 5;
+}
+.Fun > *:nth-child(4){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 7;
+}
+.Fun > *:nth-child(5){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 9;
+}
+.Fun > *:nth-child(6){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 11;
+}
+.Fun > *:nth-child(7){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 13;
+}
+.Fun > *:nth-child(8){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 15;
+}
+.Fun > *:nth-child(9){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 17;
+}
+.Fun > *:nth-child(10){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 19;
+}
+.Fun > *:nth-child(11){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 21;
+}
+.Fun > *:nth-child(12){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 23;
+}
+#con1{
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/ span 3;
+}
+#con2{
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 3;
+    grid-column: 4/ span 3;
+}
+#con3{
+    -ms-grid-column: 7;
+    -ms-grid-column-span: 3;
+    grid-column: 7/ span 3;
+}
+#con4{
+    -ms-grid-column: 10;
+    -ms-grid-column-span: 3;
+    grid-column: 10/ span 3;
+}
 .con{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     width: 266px;
     margin-right: 60px;
 
@@ -162,6 +306,8 @@ section{
     font-style: normal;
     font-weight: 500;
     line-height: 140%; /* 28px */
+    margin-top: 16px;
+    margin-bottom: 8px;
 }
 
 .con p{
@@ -173,16 +319,114 @@ section{
     line-height: 140%; /* 28px */
     text-align: left;
 }
+
 .features{
     margin-bottom: 20px;
+    padding-top: 60px;
 }
 
 .grid-pr{
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 305px 305px 305px 305px;
-    column-gap: 100px;
-    row-gap: 40px;
+    -ms-grid-columns: 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr 6px 1fr;
+    grid-template-columns: repeat(12, 1fr);
+    -webkit-column-gap: 6px;
+       -moz-column-gap: 6px;
+            column-gap: 6px;
+    -ms-grid-rows: 1fr;
+    grid-template-rows: 1fr;
 }
+
+.grid-pr > *:nth-child(1){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 1;
+}
+
+.grid-pr > *:nth-child(2){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 3;
+}
+
+.grid-pr > *:nth-child(3){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 5;
+}
+
+.grid-pr > *:nth-child(4){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 7;
+}
+
+.grid-pr > *:nth-child(5){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 9;
+}
+
+.grid-pr > *:nth-child(6){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 11;
+}
+
+.grid-pr > *:nth-child(7){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 13;
+}
+
+.grid-pr > *:nth-child(8){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 15;
+}
+
+.grid-pr > *:nth-child(9){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 17;
+}
+
+.grid-pr > *:nth-child(10){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 19;
+}
+
+.grid-pr > *:nth-child(11){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 21;
+}
+
+.grid-pr > *:nth-child(12){
+    
+    -ms-grid-row: 1;
+    
+    -ms-grid-column: 23;
+}
+
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 
 .container-for-pr img{
     width: 305px;
@@ -191,7 +435,7 @@ section{
 }
 
 .container-for-pr .ig{
-    width: 710px;
+    width: 630px;
     height: 375px;
     margin-bottom: 24px;
 }
@@ -232,12 +476,28 @@ section{
 
 .prod{
     padding: 80px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .prod button{
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     cursor: pointer;
     padding: 16px 32px;
-    align-items: flex-start;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    text-align: center;
     gap: 10px;
     border-style: none;
     color: #2A254B;
@@ -246,4 +506,302 @@ section{
     font-weight: 400;    
     background: var(--Light-Grey, #F9F9F9);
     margin-top: 35px;
+}
+
+.email-sing{
+    padding: 60px 0;
+    width: 89%;
+    background-color: #FFF;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 80px;
+}
+
+.email-sing h5{
+    color: var(--Dark-Primary, #2A254B);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 33.6px */
+    margin-bottom: 16px;
+}
+
+.email-sing p{
+    width: 55%;
+    color: var(--Dark-Primary, #2A254B);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 28px */
+}
+
+form {
+    position: relative;
+    width: 25%;
+    margin: 0 auto;
+    border-radius: 0%;
+}
+
+.email-sing input {
+    width: 100%;
+    height: 42px;
+    padding-left: 10px;
+    border-style: none;
+    background: #F9F9F9;
+    border-radius: 0%;
+}
+.email-sing input::-webkit-input-placeholder{
+    padding-left: 32px;
+}
+.email-sing input::-moz-placeholder{
+    padding-left: 32px;
+}
+.email-sing input:-ms-input-placeholder{
+    padding-left: 32px;
+}
+.email-sing input::-ms-input-placeholder{
+    padding-left: 32px;
+}
+.email-sing input::placeholder{
+    padding-left: 32px;
+}
+.email-sing button {
+    cursor: pointer;
+    position: absolute; 
+    top: 0;
+    right: -12px;
+    bottom: 0%;
+    width: 25%;
+    border: none;
+    border-radius: 0%;
+    background: #2A254B;
+    color: #FFF;
+
+}
+
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+.brend{
+    width: 100%;
+    /*background: url('foto/Image.png');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 720px;*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    
+}
+
+.disc_b h5{
+    width: 51%;
+    color: #2A254B;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 33.6px */
+    margin-bottom: 25px;
+}
+
+.disc_b p{
+    width: 55%;
+    color: #505977;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 28px */
+}
+
+.brend img{
+    width: 720px;
+}
+
+.disc_b{
+    position: relative; 
+    width: 56%;
+    padding-top: 72px;
+    padding-bottom: 50px;
+    text-align: left;
+}
+
+.disc_b button{
+    margin: 0%;
+    bottom: 50px;
+    cursor: pointer;
+    padding: 16px 32px;
+    border-style: none;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    background: var(--Light-Grey, #F9F9F9);
+    color: #2A254B;  
+    position: absolute;   
+}
+
+
+.hr-line2 {
+    width: 89%;
+	margin: 0px 0;
+	border: none;
+	border-top: 1px solid #4E4D93;
+}
+
+#menu h5{
+    color: var(--White, #FFF);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 28px */
+}
+#join h5{
+    color: var(--White, #FFF);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 28px */
+}
+
+#menu a{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 140%; /* 22.4px */
+}
+
+.br_end h5{
+    color: var(--White, #FFF);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 28px */
+}
+
+#join input {
+    width: 496px;
+    height: 60px;
+    padding-left: 10px;
+    border-style: none;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #FFF;
+    border-radius: 0%;
+}
+
+#join input::-webkit-input-placeholder{
+    color: #FFF;
+    padding-left: 32px;
+}
+
+#join input::-moz-placeholder{
+    color: #FFF;
+    padding-left: 32px;
+}
+
+#join input:-ms-input-placeholder{
+    color: #FFF;
+    padding-left: 32px;
+}
+
+#join input::-ms-input-placeholder{
+    color: #FFF;
+    padding-left: 32px;
+}
+
+#join input::placeholder{
+    color: #FFF;
+    padding-left: 32px;
+}
+
+#join button {
+    cursor: pointer;
+    position: absolute; 
+    top: 0;
+    left: 496px;
+    bottom: 0%;
+    width: 130px;
+    border: none;
+    border-radius: 0%;
+    color: #2A254B;
+    background-color: #FFF;
+}
+
+#menu, #join{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 12px;
+    text-align: left;
+}
+
+.fomm{
+    width: 100%;
+}
+
+.grid-footer{
+    padding: 60px 0;
+    width: 89%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 120px 120px 120px 120px 120px 120px 1fr;
+    grid-template-columns: 120px 120px 120px 1fr;
+    -webkit-column-gap: 120px;
+       -moz-column-gap: 120px;
+            column-gap: 120px;
+}
+
+.br_end{
+    padding: 24px 0 50px 0;
+    width: 89%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+
+.br_end div{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row ;
+            flex-direction: row ;
+    gap: 24px;
 }
